syntax = "proto3";
option java_multiple_files = true;

package sample.grpc.workflows;
option java_package = "com.github.frtu.sample.grpc.workflows";

import "metadata/sec.proto";
import "metadata/sla.proto";
import "workflows/v1/model.proto";
import "google/protobuf/empty.proto";

message WorkflowId {
  string id = 1;
}
message EmailDetail {
  string receiver = 1;
  string subject = 2;
  string content = 3;
  string status = 4;
}

// Singular query
message ByWorkflowId {
  string id = 1;
}

service WorkflowService {
  rpc Subscribe (SubscriptionEvent) returns (WorkflowId);
  rpc SubscribeMany (stream SubscriptionEvent) returns (stream WorkflowId);

  rpc QueryDetail (ByWorkflowId) returns (EmailDetail);
  rpc Terminate (ByWorkflowId) returns (google.protobuf.Empty);
  rpc Fail (ByWorkflowId) returns (google.protobuf.Empty);
}